# modelos-taller2-rags

./: .env.example  .gitignore  README.md  pyproject.toml
src/: app.py  graph.py  rag.py
